0.8.4 (UNRELEASED)
------------------
- Make SKIP messages go to to stdout, like all the other the test suite output.

0.8.3 (2014-07-10)
------------------
- Add umockdev_testbed_get_property() method. This is mostly for internal
  umockdev testing, umockdev users should use libudev/gudev get_property
  functions.
- preload: Make path redirection to testbed thread-safe for wrapped functions.
  This does NOT address all multi-thread issues, but should work for simple
  cases. (https://launchpad.net/bugs/1336671)
- Make debug logging dynamically controllable with the $UMOCKDEV_DEBUG
  environment variable. See README.rst for details.
- Emulate isatty(). It would previously return true for emulated devices as
  PTYs are being used internally, but the actual emulated device is not always
  supposed to be a TTY. Fixes regression with X.org synaptics >= 1.8 device
  emulation as that uses xf86OpenSerial() to open evdev devices (which is
  wrong, but reality).
- Don't fall back to real ioctls on emulated fds.

0.8.2 (2014-05-15)
------------------
- Fix ioctl recording of multiple device open/close cycles. This regressed in
  0.6 to only keep the data of the last cycle.
- Update devices/cameras/canon-powershot-sx200.ioctl with ioctls from
  libgphoto2 2.5.4, to make the /umockdev-run/integration/gphoto-* tests work
  with that version.
- On ioctl recording, also record the device name on close().

0.8.1 (2014-03-31)
------------------
- Fix eternal hang due to negative delays when playing back evemu scripts with
  timestamps that go backwards.

0.8 (2014-03-20)
----------------
New features:
- Add new method umockdev_testbed_load_evemu_events() to replay an evemu events
  file into an emulated evdev device. These are platform independent and thus
  more portable than a script record.
- Add -e/--evemu-events=devname=eventsfilename option to umockdev-run, to load
  an evemu .events file. (Issue #5)