@@ -1,6 +1,7 @@
 0.8.4 (UNRELEASED)
 ------------------
 - Make SKIP messages go to to stdout, like all the other the test suite output.
+- Fix test case failures when running tests without a controlling tty.
 
 0.8.3 (2014-07-10)
 ------------------
